--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>©⚔HRS's☣Personal☢Site☠⚑</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+
   <table>
     <tr>
-      <td><img src="mcdonalds-Caramel-Iced-Frapp-Regular.jpg" alt="Caramel Frappe"></td>
+      <td><img src="Capture.PNG" alt="Caramel Frappe"></td>
       <td>
         <h1>HRS</h1>
         <p><em>Currently learning how to <strong>Script/Code.</strong></em></p>
@@ -17,8 +19,10 @@
       </td>
     </tr>
   </table>
+
   <hr>
   <h3>Education</h3>
+
   <h4>Schools</h4>
   <table>
     <th>
@@ -124,7 +128,7 @@
     </li>
   </ul>
   <h3>Favorite Drinks</h3>
-  <ol>
+  <ol type=i>
     <li><a
         href="https://www.google.com/search?q=caramel+frappes+mcdonalds&rlz=1C1CHBF_enUS863US863&sxsrf=ACYBGNSBz_ET4ezQ_k8E4B-Z9kdvv_L5Tw:1579755581361&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjx4oiS-JjnAhWV4J4KHU1aCKAQ_AUoAXoECA8QAw&biw=776&bih=744#imgrc=ANjAcnjaojgbSM">Caramel
         Frappe</a></li>
